--- a/webapp-project/buildspec.yml
+++ b/webapp-project/buildspec.yml
@@ -5,12 +5,23 @@ phases:
     runtime-versions:
       java: corretto8
 
+  pre_build:
+    commands:
+      - echo "Logging in to AWS CodeArtifact..."
+      - CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token --domain devops --domain-owner 939068521677 --region ap-south-1 --query authorizationToken --output text)
+      - export CODEARTIFACT_AUTH_TOKEN
+
   build:
     commands:
       - echo "Build started on `date`"
-      - mvn clean package -DskipTests
+      - mvn clean install -s settings.xml
+
+  post_build:
+    commands:
+      - echo "Build completed on `date`"
+      - mvn package -s settings.xml
 
 artifacts:
   files:
     - target/*.war
-  discard-paths: yes
+  discard-paths: no
